# file-server

./: CMakeLists.txt  LICENSE  README.md  commandlinereader.cpp  commandlinereader.h  configurable.cpp  configurable.h  configuration.cpp  configuration.h  configurationfilereader.cpp  configurationfilereader.h  configurationreader.cpp  configurationreader.h  datamodel.cpp  datamodel.h  default.gitignore  filewebserver.cpp  filewebserver.h  generator.h  htmlcontentgenerator.h  main.cpp
Design/: server_mockup.json  server_mockup2.json
